2005-11-22  Russell Bryant  <russell@digium.com>

	* apps/app_voicemail.c: Remove left over "yay!" debuggin message. (issue #5829)

2005-11-21  Kevin P. Fleming  <kpfleming@digium.com>

	* apps/app_cut.c: remove unnecessary include that causes spurious rebuilding

	* channels/chan_sip.c (build_peer): ensure that case changes made to peer names are not ignored during reload operations
 	(build_peer): when a peer is changed from dynamic to static mode, reset the default port number if no other has been specified

	* channels/chan_iax2.c (build_peer and build_user): ensure that case changes made to peer/user names are not ignored during reload operations
 	(build_peer): when a peer is changed from dynamic to static mode, reset the default port number if no other has been specified

2005-11-21  Russell Bryant  <russell@digium.com>

	* Makefile: Revert previous change for Darwin.

	* apps/app_osplookup.c: Properly populate the number of results. (issue #5789)

	* Makefile: Don't hard-code that poll functionality needs to be provided on Darwin.
	* apps/Makefile: Fix incorrect portion of the patch to fix 'make install' on Solaris.

	* channels/chan_iax2.c (iax2_getpeername): Return non-zero to indicate that a peer was found when using realtime (issue #5815)

2005-11-20  Russell Bryant  <russell@digium.com>

	* Makefile apps/Makefile: Fix 'make install' for Solaris. (issue #5775)

	* apps/app_record.c: Don't leak a frame if writing it to the file fails. (issue #5787)

	* Makefile: Create the monitor spool directory when the other spool directories are created.

	* channels/chan_sip.c channels/chan_iax2.c: Change warning messages about the number of scheduled events happening all at once to debug messages. (issue #5794)

	* pbx/pbx_spool.c: Fix crash when a value is not specified with a variable on a Set: line in a call file. (issue #5806)

	* apps/app_meetme.c: Fix the 'X' option to the MeetMe application. (issue #5773)
