@@ -1,5 +1,10 @@
 2005-11-22  Russell Bryant  <russell@digium.com>
 
+	* indications.c: Fix spelling of "cadence", allowing the old misspelling for backwards compatability. (issue #5826)
+	* configs/indications.conf.sample: Fix spelling of "cadence", allowing the old misspelling for backwards compatability. (issue #5826)
+	* include/asterisk/indications.h: Fix spelling of "cadence", allowing the old misspelling for backwards compatability. (issue #5826)
+	* res/res_indications.c: Fix spelling of "cadence", allowing the old misspelling for backwards compatability. (issue #5826)
+
 	* apps/app_voicemail.c: Remove left over "yay!" debuggin message. (issue #5829)
 
 2005-11-21  Kevin P. Fleming  <kpfleming@digium.com>
